Wrote css for website and changed some html.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
         <title>Book of They</title>
         <link rel="icon" href="img/bookhead.png">
+        <link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@500&display=swap" rel="stylesheet"> 
+        <link rel="stylesheet" type="text/css" href="css/BoT.css">
 </head>
 <body>
     <!-- header element -->
@@ -16,7 +18,7 @@
         <h2>About BoT</h2>
         <p>The Book of They is a book detailing the works of They.</p>
         <img src="img/connections.jpg">
-        <p>The idea is that words connect on one level, sentences on another, paragraphs upon another, chapters on another, until finally books on another.</p>
+        <p class=caption">The idea is that words connect on one level, sentences on another, paragraphs upon another, chapters on another, until finally books on another.</p>
         
         <!-- Connections -->
         <h2>Connections</h2>
