--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h2>About BoT</h2>
         <p>The Book of They is a book detailing the works of They.</p>
         <img src="img/connections.jpg">
-        <p class=caption">The idea is that words connect on one level, sentences on another, paragraphs upon another, chapters on another, until finally books on another.</p>
+        <p class=caption>The idea is that words connect on one level, sentences on another, paragraphs upon another, chapters on another, until finally books on another.</p>
         
         <!-- Connections -->
         <h2>Connections</h2>
